initial version of the new aboutsip.com

--- a/index.html
+++ b/index.html
@@ -1,1 +1,46 @@
-Coming Soon
+---
+title: Hello, World!
+layout: default
+---
+
+<div class="row row-offcanvas row-offcanvas-right">
+   <div class="col-xs-12 col-sm-9">
+      <p class="pull-right visible-xs">
+         <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas">Toggle nav</button>
+      </p>
+      <div class="jumbotron">
+         <h1>About SIP</h1>
+         <p>Welcome to aboutsip. This site is dedicated to all things related to SIP, both providing information about the protocol as well as libraries for building your very own SIP stack and libraries for reading &amp; writing pcaps. 
+         </p>
+         <p>In short, everything you would ever need for anything SIP. </p>
+      </div>
+      <div class="row">
+
+         <!-- SIP Intro Section -->
+         <div class="col-6 col-sm-6 col-lg-4">
+            <h2>SIP</h2>
+            <p>This section is dedicated to providing information about the protocol. 
+               Here you will find information ranging from the very basic use case of 
+               SIP, deep dives into areas such as the transaction state machine to issues with NAT &amp; Firewall as related to SIP.
+            </p>
+            <p><a class="btn btn-default" href="/sip" role="button">View details &raquo;</a></p>
+         </div><!--/span-->
+
+         <!-- Pkts.io Intro Section -->
+      <div class="col-6 col-sm-6 col-lg-4">
+         <h2>pkts.io</h2>
+         <p>A set of pure java libraries for manipulating pcaps. A must-have tool for developers and system integrators alike, which provides an easy-to-use intutive API for reading &amp; writing pcaps. It's primary purpose is to allow anyone to write the tools you need to analyze pcaps.
+         </p>
+         <p><a class="btn btn-default" href="/pktsio" role="button">View details &raquo;</a></p>
+      </div><!--/span-->
+
+         <!--  Netty Integration Intro Section -->
+      <div class="col-6 col-sm-6 col-lg-4">
+         <h2>sipstack.io</h2>
+         <p>If you are looking to build your own SIP stack you will need a fast &amp; reliable network stack and a solid framing &amp; parsing library to start off with. sipstack.io is project based on netty.io and pkts.io, where Netty is providing the reliable network stack and the framing &amp; and parsing of SIP messages is provided by pkts.io. 
+         </p>
+         <p><a class="btn btn-default" href="/sipstackio" role="button">View details &raquo;</a></p>
+      </div><!--/span-->
+   </div><!--/row-->
+</div><!--/span-->
+
