--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ layout: default
          <h2>pkts.io</h2>
          <p>A set of pure java libraries for manipulating pcaps. A must-have tool for developers and system integrators alike, which provides an easy-to-use intutive API for reading &amp; writing pcaps. It's primary purpose is to allow anyone to write the tools you need to analyze pcaps.
          </p>
-         <p><a class="btn btn-default" href="/pktsio" role="button">View details &raquo;</a></p>
+         <p><a class="btn btn-default" href="/pkts" role="button">View details &raquo;</a></p>
       </div><!--/span-->
 
          <!--  Netty Integration Intro Section -->
@@ -39,7 +39,7 @@ layout: default
          <h2>sipstack.io</h2>
          <p>If you are looking to build your own SIP stack you will need a fast &amp; reliable network stack and a solid framing &amp; parsing library to start off with. sipstack.io is project based on netty.io and pkts.io, where Netty is providing the reliable network stack and the framing &amp; and parsing of SIP messages is provided by pkts.io. 
          </p>
-         <p><a class="btn btn-default" href="/sipstackio" role="button">View details &raquo;</a></p>
+         <p><a class="btn btn-default" href="/sipstack" role="button">View details &raquo;</a></p>
       </div><!--/span-->
    </div><!--/row-->
 </div><!--/span-->
