--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ layout: default
          <h2>sipstack.io</h2>
          <p>If you are looking to build your own SIP stack you will need a fast &amp; reliable network stack and a solid framing &amp; parsing library to start off with. sipstack.io is project based on netty.io and pkts.io, where Netty is providing the reliable network stack and the framing &amp; and parsing of SIP messages is provided by pkts.io. 
          </p>
-         <p><a class="btn btn-default" href="/sipstackio" role="button">View details &raquo;</a></p>
+         <p><a class="btn btn-default" href="http://www.sipstack.io" role="button">View details &raquo;</a></p>
       </div><!--/span-->
    </div><!--/row-->
 </div><!--/span-->
