added link to recorded presentation

--- a/sip.html
+++ b/sip.html
@@ -133,6 +133,7 @@ Download:
 View Online: 
 <ul>
 <li><a href="http://www.slideshare.net/JonasBorjesson/aboutsip-routing">@Slideshare</a></li>
+<li><a href="https://vimeo.com/140267478">Recorded presentation (Vimeo)</a></li>
 </ul>
    </td>
   </tr>
