added my so-called book about presence in case anyone would be interested

--- a/sip.html
+++ b/sip.html
@@ -142,6 +142,33 @@ View Online:
 </p>
         </div><!--/SIP Routing-->
 
+
+         <!--  Presence -->
+         <div class="anchor col-xs-12" id="presence">
+<h1>Presence</h1>
+<p>
+For many years I designed &amp; implemented a presence solution based off of the OMA Presence Enabler 1.0. While doing so I learned a lot about Presence and what started off as emails &amp; discussions between colleagues, grew to presentations then to internal white-papers and eventually I decided to put it all together as a book. I never finished the project but decided to post it here in case someone finds it useful. Note: nothing really useful until chapter 3! :-)
+</p>
+
+<p>
+
+<table class="table">
+<tbody>
+  <tr>
+   <td>
+Download: 
+<ul>
+<li><a href="/presence_book.pdf">Presence "Book"</a></li>
+</ul>
+   </td>
+   <td>
+   </td>
+  </tr>
+</tbody>
+</table>
+</p>
+        </div><!--/SIP Routing-->
+
    </div><!--/row-->
 </div><!--/span-->
 
