--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@ layout: default
 
          <!-- SIP Lib Intro Section -->
         <div class="col-sm-6 col-md-6">
-         <h2>sip lib</h2>
-         <p>A powerful SIP library for framing &amp; parsing SIP messages with a fluent API and immutable objects. SIP Lib is part of pkts.io and is designed to be used as a standalone module, either for building your own SIP stack from scratch, or developing your own tools for parsing &amp; manipulating SIP.
+         <h2>siplib.io</h2>
+         <p>A powerful SIP library for framing &amp; parsing SIP messages with a fluent API and immutable objects. siplib is part of pkts.io and is designed to be used as a standalone module, either for building your own SIP stack from scratch, or developing your own tools for parsing &amp; manipulating SIP.
          </p>
-         <p>SIP Lib is is used by sipstack.io for all its SIP parsing &amp; framing needs.
+         <p>siplib is is used by sipstack.io for all its SIP parsing &amp; framing needs.
          </p>
-         <p><a class="btn btn-default" href="/siplib" role="button">View details &raquo;</a></p>
+         <p><a class="btn btn-default" href="http://www.siplib.io" role="button">View details &raquo;</a></p>
       </div><!--/span-->
 
    </div><!--/row-->
